# wandb-mlops

./: .gitignore  README.md  activate.sh  environment.yml  pyproject.toml
notebooks/: .gitignore  01_EDA.ipynb  02_Split.ipynb  03_Baseline.ipynb  04_refactor_baseline.ipynb
scripts/dev/: 01_eda.py  02_split.py  eval.py  train.py
src/: params.py  utils.py
