[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["ma7dev <sudomaze@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = ">=1.9"
fastai = ">=2.7"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"
torchvision = "^0.15.1"
tqdm = "^4.65.0"
wandb = "^0.15.0"
ipykernel = "^6.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
